# python-template

./: README.md  cookiecutter.json  justfile  pyproject.toml  todo.txt
.github/workflows/: lint.yaml  test.yaml
src/project_name/: main.py
src/{{cookiecutter.project_name}}/: main.py
tests/: conftest.py
{{cookiecutter.project_name}}/: README.md  pyproject.toml  todo.txt
